Sidebar icon spacing fix

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -70,7 +70,7 @@ img.site-logo {
   cursor: pointer;
   position: absolute;
   top: 50%;
-  right: 40px; /* Adjust the distance from the right */
+  right: 5%; /* Adjust the distance from the right */
   transform: translate(0, -50%);
   display: flex;
   flex-direction: column;
